# kronymous

.github/workflows/: clinical-orchestrator.yml
clinical_orchestrator/: .env.example  .gitignore  README.md  pyproject.toml
clinical_orchestrator/clinical_orchestrator/: __init__.py  cli.py
clinical_orchestrator/clinical_orchestrator/agents/: base.py  chronic_care.py  diagnostic.py  documentation.py
clinical_orchestrator/clinical_orchestrator/agents/subagents/: history.py  imaging.py  pathology.py
clinical_orchestrator/clinical_orchestrator/api/: schemas.py  server.py
clinical_orchestrator/clinical_orchestrator/core/: __init__.py  audit.py  bus_backend.py  context.py  event_bus.py  llm.py  orchestrator.py  pii.py  safety.py  self_debug.py  storage.py
clinical_orchestrator/clinical_orchestrator/data/: icd10_cpt.py  protocols.py
clinical_orchestrator/examples/: demo.py
clinical_orchestrator/tests/: test_api.py  test_bus_backend.py  test_chronic_care.py  test_data_lookup.py  test_diagnostic.py  test_documentation.py  test_event_bus.py  test_llm_router.py  test_orchestrator.py  test_pii.py  test_safety.py  test_self_debug.py  test_storage.py
